--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,142 @@
-pymysql
-re
-langgraph
-mistralai
-python-dotenv
-langchain
-langchain_mistralai
-langchain_core
-langchain_text_splitters
-logging
+
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+dataclasses-json==0.6.7
+distro==1.9.0
+docstring_parser==0.16
+dotenv==0.9.9
+et_xmlfile==2.0.0
+eval_type_backport==0.2.2
+faiss-cpu==1.10.0
+filelock==3.18.0
+fonttools==4.57.0
+frozenlist==1.5.0
+fsspec==2025.3.2
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-auth==2.39.0
+google-cloud-aiplatform==1.90.0
+google-cloud-bigquery==3.31.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+greenlet==3.1.1
+grpc-google-iam-v1==0.14.2
+grpcio==1.72.0rc1
+grpcio-status==1.72.0rc1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+langchain==0.3.24
+langchain-community==0.3.22
+langchain-core==0.3.55
+langchain-huggingface==0.1.2
+langchain-mistralai==0.2.10
+langchain-openai==0.3.14
+langchain-text-splitters==0.3.8
+langgraph==0.3.25
+langgraph-checkpoint==2.0.24
+langgraph-prebuilt==0.1.8
+langgraph-sdk==0.1.61
+langsmith==0.3.24
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+mistralai==1.6.0
+mpmath==1.3.0
+multidict==6.3.2
+mypy-extensions==1.0.0
+mysql-connector-python==9.2.0
+narwhals==1.33.0
+networkx==3.4.2
+numpy==2.2.4
+openai==1.75.0
+openpyxl==3.1.5
+orjson==3.10.16
+ormsgpack==1.9.1
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==6.31.0rc1
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.2
+pydantic-settings==2.8.1
+pydantic_core==2.33.1
+pydeck==0.9.1
+PyMySQL==1.1.1
+pyparsing==3.2.3
+pypdf==5.4.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rpds-py==0.24.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+sentence-transformers==4.1.0
+setuptools==79.0.0
+shapely==2.1.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+streamlit==1.44.1
+streamlit-option-menu==0.4.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.7.0
+tornado==6.4.2
+tqdm==4.67.1
+transformers==4.51.3
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+tzdata==2025.2
+urllib3==2.3.0
+watchdog==6.0.0
+xxhash==3.5.0
+yarl==1.19.0
+zstandard==0.23.0
