--- a/requirements.txt
+++ b/requirements.txt
@@ -39,8 +39,8 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 greenlet==3.1.1
 grpc-google-iam-v1==0.14.2
-grpcio==1.72.0rc1
-grpcio-status==1.72.0rc1
+#grpcio==1.72.0rc1
+#grpcio-status==1.72.0rc1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -87,7 +87,7 @@ pandas==2.2.3
 pillow==11.1.0
 propcache==0.3.1
 proto-plus==1.26.1
-protobuf==6.31.0rc1
+#protobuf==6.31.0rc1
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
