--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ greenlet==3.1.1
 grpc-google-iam-v1==0.14.2
 #grpcio==1.72.0rc1
 #grpcio-status==1.72.0rc1
+rank_bm25==0.2.2 
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
